--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,12 +41,12 @@ body {
 .contant {
   display: grid;
   justify-content: center;
-  gap: 10px;
+  gap: 15px;
   margin-bottom: 10px;
 }
 
 input {
-  width: 160px;
+  width: 180px;
   padding: 10px 20px;
   background-color: var(--app-gary-background-color);
   border-radius: 5px;
@@ -55,13 +55,13 @@ input {
 }
 
 input:nth-child(2) {
-  width: 160px;
-  margin-left: 1.5px;
+  width: 180px;
+  margin-left: 15px;
 }
 
 input:nth-child(3) {
   width: 220px;
-  margin-left: 1.5px;
+  margin-left: 15px;
 }
 
 .create-button {
@@ -73,6 +73,8 @@ input:nth-child(3) {
   background-color: #41a841;
   color: var(--app-white-text-color);
   cursor: pointer;
+  margin: 0 auto;
+  width: 10rem;
 }
 
 .message {
@@ -82,36 +84,38 @@ input:nth-child(3) {
   margin-bottom: 5px;  
   display: block;  
   text-align: left;
+  position: fixed;
+  top: 22rem;
 }
 
 
 .shape-grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
-  gap: 10px;
-  padding: 10px;
+  gap: 20px;
   border-radius: 5px;
-  margin-bottom: 20px;
-  width: 660px; 
+  width: 730px; 
   height: auto;
   min-height: 400px;
   align-content: start;
   overflow: auto;
+  place-items: center;
+  margin-top: 20px;
 }
 
 .contact-card {
   background-color: var(--app-gary-background-color);
   border: 1px solid #444;
-  width: 290px;
-  height: 100px;
+  width: 250px;
   border-radius: 8px;
   transition: transform 0.3s ease, border-color 0.3s ease;
   overflow: hidden;
   text-align: left;
-  padding-left: 20px;
+  padding: 10px 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  cursor: pointer;
 }
 
 .contact-card:hover {
@@ -119,8 +123,7 @@ input:nth-child(3) {
 }
 
 .contact-card div {
-  margin: 5px 0;
-  overflow: hidden;
+  margin-bottom: 2px;
   white-space: nowrap;
 }
 
@@ -135,6 +138,6 @@ input:nth-child(3) {
   inset: auto 40px 40px auto;
   border-radius: 5px;
   display: none;
-  background-color: #16db62;
+  background-color: #a336f1;
 }
 
